Nuevos Cambios Proyecto SAB

--- a/WebAppSAB/appsettings.json
+++ b/WebAppSAB/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "DBTipo": "SqlServer",
+
+  "ConnectionStrings": {
+    "SqlServer": "Server=LAPTOP-B130UKF6\\SQLEXPRESS; initial catalog=ProyectoSAB; trusted_connection=true;",
+    "Postgres": "Host=localhost;Database=ProyectoSAB;Username=postgres;Password=luisalfredo;",
+    "Memoria": "SAB_Memoria"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
