--- a/WebAppSAB/appsettings.json
+++ b/WebAppSAB/appsettings.json
@@ -4,6 +4,7 @@
   "ConnectionStrings": {
     "SqlServer": "Server=LAPTOP-B130UKF6\\SQLEXPRESS; initial catalog=ProyectoSAB; trusted_connection=true;",
     "Postgres": "Host=localhost;Database=ProyectoSAB;Username=postgres;Password=luisalfredo;",
+    "MySql": "server=localhost;user=root;password=luisalfredo;database=ProyectoSAB;",
     "Memoria": "SAB_Memoria"
   },
 
